test/Constraints/issue-77924.code
// RUN: %target-typecheck-verify-language

// https://github.com/languagelang/language/issues/77924
fn foo<T>(_ x: (T) -> Void) {
  (a: 0, b: x).b(0) // expected-error {{cannot convert value of type 'Int' to expected argument type 'T'}}
}

fn bar<T>(_ x: T) {} // expected-note {{generic parameters are always considered '@escaping'}}

fn baz(_ fn: () -> Void) {
  (a: 0, b: bar).b(fn) // expected-error {{converting non-escaping parameter 'fn' to generic parameter 'T' may allow it to escape}}
}
